--- a/nginx/local/conf.d/whalefall.conf
+++ b/nginx/local/conf.d/whalefall.conf
@@ -78,35 +78,100 @@ server {
     }
 }
 
-# HTTPS 服务器配置（可选，需要SSL证书）
-# server {
-#     listen 443 ssl http2;
-#     server_name localhost whalefall.local;
-#     
-#     # SSL 证书配置
-#     ssl_certificate /etc/nginx/ssl/cert.pem;
-#     ssl_certificate_key /etc/nginx/ssl/key.pem;
-#     
-#     # SSL 配置
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-#     ssl_prefer_server_ciphers off;
-#     ssl_session_cache shared:SSL:10m;
-#     ssl_session_timeout 10m;
-#     
-#     # 其他配置与 HTTP 相同
-#     location / {
-#         proxy_pass http://whalefall_backend;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
+# HTTPS 服务器配置
+server {
+    listen 443 ssl http2;
+    server_name localhost whalefall.local;
+    
+    # SSL 证书配置
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
+    
+    # SSL 配置
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-CHACHA20-POLY1305;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_session_tickets off;
+    
+    # 安全头
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Frame-Options DENY always;
+    add_header X-Content-Type-Options nosniff always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    
+    # 客户端最大请求体大小
+    client_max_body_size 16M;
+    
+    # 访问日志
+    access_log /var/log/nginx/whalefall_ssl_access.log;
+    error_log /var/log/nginx/whalefall_ssl_error.log;
+    
+    # 代理配置
+    location / {
+        proxy_pass http://whalefall_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # 超时配置
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # 缓冲配置
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+        proxy_busy_buffers_size 8k;
+    }
+    
+    # 静态文件缓存
+    location /static/ {
+        proxy_pass http://whalefall_backend;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        add_header X-Cache-Status "HIT";
+    }
+    
+    # 健康检查
+    location /health {
+        proxy_pass http://whalefall_backend;
+        access_log off;
+    }
+    
+    # API 接口特殊处理
+    location /api/ {
+        proxy_pass http://whalefall_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # API 超时配置
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
+    }
+    
+    # 管理界面
+    location /admin {
+        proxy_pass http://whalefall_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
 
-# 重定向 HTTP 到 HTTPS（如果启用 HTTPS）
-# server {
-#     listen 80;
-#     server_name localhost whalefall.local;
-#     return 301 https://$server_name$request_uri;
-# }
+# 重定向 HTTP 到 HTTPS
+server {
+    listen 80;
+    server_name localhost whalefall.local;
+    
+    # 重定向所有HTTP请求到HTTPS
+    return 301 https://$server_name$request_uri;
+}
